tests/lexer/valid/11_nested_comments.src
/* Внешний комментарий
   /* Вложенный комментарий */
   еще текст */
int x = 42;