tests/lexer/invalid/10_mixed_errors.src
// Смешанные ошибки
int @x = 42;
float 123.456.789;
"unterminated
/* незакрытый комментарий